Update 09-Objects and Data Structures Assessment Test.ipynb

--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -38,15 +38,15 @@
    "source": [
     "Double Click HERE to edit this markdown cell and write answers.\n",
     "\n",
-    "Numbers:\n",
+    "Numbers: There are 3 types of numbers in Pythone. Integers are whole numbers, Floats are numbers with decimals, and complex are numbers represented as a variable.\n",
     "\n",
-    "Strings:\n",
+    "Strings: Strings are words or letters surrounded by double quotes or single quotes.\n",
     "\n",
-    "Lists:\n",
+    "Lists: Lists are used to store multiple items in one variable. Lists use square brackets, a fixed order and are mutable.\n",
     "\n",
-    "Tuples:\n",
+    "Tuples: Tuples are used to store multiple items in one variable. Tuples use round brackets, and are immutable. \n",
     "\n",
-    "Dictionaries:\n"
+    "Dictionaries: Dictionaries are used to store data values in key:value pairs. Written in curly brackets, ordered and mutable with no duplicate entries. \n"
    ]
   },
   {
